# MemGraph

./: .gitignore  Makefile  README.md  ab_relay.py  env.sample  mcp_server.py  pyproject.toml  storage_analysis_plan_sponsor_acme_20251009_134150.html  storage_analysis_plan_sponsor_acme_20251009_134150.json  storage_export_plan_sponsor_acme_20251009_133745.json
app/: __init__.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  bedrock.py  config.py
app/memory/: __init__.py  extractor.py  retrieval.py  service.py
app/stores/: __init__.py  graph_neo4j.py  kv_sqlite.py  vector_chroma.py
docs/: architecture.html  architecture.md  quickstart.md  storage-architecture.md  system-design.html  system-design.md  technical-implementation.md
orchestrator/: __init__.py  mock_cli.py
scripts/: __init__.py  demo_run.md  seed_demo.py  start_demo.py  storage_analyzer.py  storage_inspector.py  storage_visualizer.py
ui/: __init__.py  streamlit_app.py  streamlit_app_improved.py
